manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-get-tasks
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: get-tasks.shivamsharma.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todoapp-get-tasks-service
            port: 
              number: 80
